# spechls-circt

./: .clang-format  .clang-tidy  404.html  CMakeLists.txt  README.md  index.html  index.xml  sitemap.xml  test.sh
.github/workflows/: build-and-test.yml
GecosAPI/: BuiltinAttributes.cpp  BuiltinTypes.cpp  CMakeLists.txt  ExtraPassesCAPI.cpp  IR.h  SpecHLSGecosAPI.cpp  SpecHLSGecosAPIPasses.cpp
categories/: index.html  index.xml
codegen/: CMakeLists.txt  spechls-support.h  spechls_support.h
docs/: index.html  index.xml
docs/dialects/: index.html  index.xml
docs/dialects/schedule/: index.html
docs/dialects/scheduleops/: index.html
docs/dialects/spechls/: index.html
docs/dialects/spechlsops/: index.html
docs/dialects/wcet/: index.html
docs/schedulepasses/: index.html
docs/spechlspasses/: index.html
docs/wcetpasses/: index.html
include/: InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h  Utils.h
include/Analysis/SpecHLS/: ConfigurationExcluderAnalysis.h  MobilityAnalysis.h  OperationDelayAnalysis.h  SchedulingAnalysis.h  SpeculationExplorationAnalysis.h
include/Analysis/Wcet/: GraphWcetAnalysis.h  LinearWcetAnalysis.h  PenaltyGraphAnalysis.h
include/CAPI/: SSP.h  SpecHLS.h
include/CAPI/Dialect/: Schedule.h  SpecHLS.h  Wcet.h
include/CAPI/Gecos/: Gecos.h
include/CAPI/Heptane/: Heptane.h
include/Common/: Dominance.h  OutliningUtils.h  TransitiveClosure.h
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td  scheduleToSSP.h
include/Conversion/Schedule/: CMakeLists.txt  Passes.h  Passes.td
include/Conversion/SpecHLS/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/: CMakeLists.txt
include/Dialect/ISADef/: ISADefDialect.h  ISADefDialect.td  ISADefOps.td  ISADefUtils.h
include/Dialect/Schedule/: CMakeLists.txt  ScheduleDialect.h  ScheduleDialect.td  ScheduleOps.h  ScheduleOps.td
include/Dialect/ScheduleDialect/: ScheduleDialectDialect.h  ScheduleDialectDialect.td  ScheduleDialectOps.h  ScheduleDialectOps.td
include/Dialect/SpecHLS/: CMakeLists.txt  SpecHLSDialect.h  SpecHLSDialect.td  SpecHLSOps.h  SpecHLSOps.td  SpecHLSTypes.h  SpecHLSUtils.h
include/GecosAPI/: gecosapi.h
include/Support/: DelayUtils.h  WcetUtils.h
include/Transforms/: CMakeLists.txt  GammaPatterns.td  Passes.h  Passes.td  SpecHLSConversion.h
include/Transforms/VitisExport/: CFileContent.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Analysis/SpecHLS/: CMakeLists.txt  ConfigurationExcluderAnalysis.cpp  MobilityAnalysis.cpp  OperationDelayAnalysis.cpp  SchedulingAnalysis.cpp  SpeculationExplorationAnalysis.cpp
lib/Analysis/Wcet/: CMakeLists.txt  GraphWcetAnalysis.cpp  LinearWcetAnalysis.cpp  PenaltyGraphAnalysis.cpp
lib/CAPI/: CMakeLists.txt  SSP.cpp  SpecHLSCAPI.cpp
lib/CAPI/Gecos/: CMakeLists.txt  Gecos.cpp
lib/CAPI/Heptane/: CMakeLists.txt  Heptane.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/ScheduleToSSP/: CMakeLists.txt  ScheduleToSSP.cpp
lib/Conversion/SpecHLSToHW/: CMakeLists.txt  SpecHLSToHW.cpp  SpecHLSToSeq.cpp  common.cpp
lib/Conversion/SpecHLSToSeq/: CMakeLists.txt  SpecHLSToSeq.cpp
lib/Conversion/scheduleToSSP/: CMakeLists.txt  scheduleToSSP.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Schedule/: CMakeLists.txt  ScheduleDialect.cpp  ScheduleOps.cpp
lib/Dialect/ScheduleDialect/: ScheduleDialectDialect.cpp  ScheduleDialectOps.cpp
lib/Dialect/SpecHLS/: CMakeLists.txt  SpecHLSDialect.cpp  SpecHLSOps.cpp  SpecHLSTypes.cpp  SpecHLSUtils.cpp
lib/Support/: CMakeLists.txt  DelayUtils.cpp  WcetUtils.cpp
lib/Tools/TestCaseGenerators/: TestMergeGamma.cpp
lib/Tools/spechls-lsp-server/: CMakeLists.txt  SpecHLSLspServerMain.cpp
lib/Transforms/: CMakeLists.txt
lib/Transforms/Analysis/: DataflowDominatorAnalysis.cpp  Dominance.cpp  GuardLogicAnalyzer.cpp  PostDataflowDominatorAnalysis.cpp  PostDominatorAnalysis.cpp  TransitiveClosure.cpp
lib/Transforms/Common/: LongestPath.cpp  OutliningUtils.cpp  UnrollInstr.cpp
lib/Transforms/ExportElkJS/: ExportElk.cpp
lib/Transforms/Scheduling/: AutoPipeline.cpp  ConfigurationExcluder.cpp  MobilityPass.cpp  Schedule.cpp  TechLibraryBuilder.cpp
lib/Transforms/Simplifier/: EliminateRedundantGammaInputs.cpp  FactorGammaInputs.cpp  GroupControlLogic.cpp  InlineOptimizedModules.cpp  InlineOptimizedModules.h  MergeGammas.cpp  MergeLUTs.cpp  RTLILImporter.cpp  RTLILImporter.h  YosysOptimizer.cpp
lib/Transforms/SpecHLSToComb/: EncoderToComb.cpp  GammaConversion.cpp  LUTConversion.cpp  RollbackConversion.cpp  SpecHLSLUTToComb.cpp  SpecHLSToComb.cpp
lib/Transforms/SpecHLSToSeq/: CMakeLists.txt  DelayConversion.cpp  SpecHLSToSeq.cpp
lib/Transforms/VitisExport/: CFileContent.cpp  Delay.h  ExportVitisHLS.cpp  PrintOperations.cpp  PrintTestbench.cpp  PrintUtils.cpp
spechls-opt/: CMakeLists.txt  spechls-opt.cpp
tags/: index.html  index.xml
test/: CMakeLists.txt  dummy.mlir  gamma.mlir  lit.cfg.py  tasks.mlir
test/Examples/: full_iss.mlir  full_iss_bis.mlir  full_iss_rolled.mlir  pico_iss.mlir  unroll.mlir
test/Lowering/: test-rollback-to-comb.mlir
test/SpecHLS/: alpha.mlir  call.mlir  delay.mlir  field.mlir  fifo.mlir  gamma.mlir  load.mlir  lut.mlir  mu.mlir  pack.mlir  print.mlir  smallProc.mlir  smallProcWithMemSpec.mlir  strings.mlir  struct.mlir  sync.mlir  tasks.mlir  unpack.mlir  wcet.mlir  wcet2.mlir  wcet3.mlir  wcet4.mlir  wcet5.mlir  wcet6.mlir  wcet7.mlir
test/SpecHLS/Conversion/: kernel.mlir  rvi32.mlir  spechls-to-hw.mlir  (+2 more)
test/test-gecos-api/: test-gecos.c
test/yosystest/: yosys.cpp
tools/: CMakeLists.txt
tools/spechls-lsp/: CMakeLists.txt  spechls-lsp.cpp
tools/spechls-lsp-server/: CMakeLists.txt
tools/spechls-opt/: CMakeLists.txt  spechls-opt.cpp
tools/spechls-reduce/: CMakeLists.txt  spechls-reduce.cpp
tools/spechls-translate/: CMakeLists.txt  spechls-translate.cpp
website/: .gitignore  copy_docs.sh  hugo.toml  process_included_docs.sh
website/content/: _index.md
xdsl/: PrintMuSymbolNames.py  README.md  generic.mlir  hw_constant_ext.py  spechls_xdsl.py  test-spechls.mlir  test-xdsl.py  test.mlir
(+140 files in other folders)
